<?xml version="1.0"?>
<package format="3">
  <name>bunker_gazebo_sim</name>
  <version>0.0.0</version>
  <description>Gazebo (Classic) simulation launch/config package for the BUNKER robot on ROS 2 Humble.</description>

  <maintainer email="zsq@todo.todo">zsq</maintainer>
  <license>MIT</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime deps (ROS 2 / Gazebo Classic) -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>gazebo_ros2_control</exec_depend>

  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>controller_manager</exec_depend>

  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>bunker_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>